<resources>
    <string name="app_name">Prva</string>

    <string name="hello_world">Hello world!</string>
    <string name="third_activity">Welcome to third activity!</string>
    <string name="hello_world_second">Hello new world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_zad7">zad7</string>
    <string name="web_browser">Start google</string>
    <string name="make_calls">Make Call</string>
    <string name="show_map">Show Map</string>
    <string name="fragment1">This is fragment 1</string>
    <string name="frag1">frag1</string>
    <string name="new_fragment1">Start fragment static</string>
    <string name="new_fragment2">Start fragment dynamic</string>
    <string name="fragment2">This is fragment 2</string>

    <string name="start_fragment2">Start fragment 2</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_for_fragment_static">ActivityForFragmentStatic</string>
    <string name="title_activity_activity_for_fragment_dynamic">ActivityForFragmentDynamic</string>



</resources>
